Setup local environment and add manager authentication
